Deployments/splunk/ingress.yaml
# https://splunk.github.io/splunk-operator/Ingress.html#Configuring-Ingress-Using-NGINX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-rke-standalone-ingress
  namespace: splunk-operator
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/default-backend: splunk-rke-standalone-service
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: splunk-search.server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-rke-standalone-service
            port:
              number: 8000
  - host: splunk-admin.server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-rke-cluster-manager-service
            port:
              number: 8000
  - host: splunk-mon.server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-rke-monitoring-console-service
            port:
              number: 8000
